--- a/style.css
+++ b/style.css
@@ -70,6 +70,11 @@
     color:#b6bcc2b0;
   }
 
+  .brief{
+    font-weight:bold;
+    font-size: 100%;
+  }
+
 
   #header {
     grid-area: header;
